# projet___bac3

projet-chatbot/: .gitignore  build.sh  requirements.txt  run.py  wsgi.py
projet-chatbot/chatbot_app/: __init__.py  models.py  pyproject.toml  rag_service.py  requirements.txt  routes.py  utils.py
projet-chatbot/chatbot_app/db_faiss/: index.faiss  index.pkl
projet-chatbot/chatbot_app/instance/: db.sqlite3
projet-chatbot/chatbot_app/knowledge_base/: FRAIS.txt  a_propos.txt  infrastructure.txt  inscription.txt  notre_historique.txt  organisation_fonctionnel.txt  preinscription.txt
projet-chatbot/chatbot_app/static/: manifest.json
projet-chatbot/chatbot_app/static/css/: style.css
projet-chatbot/chatbot_app/static/js/: main.js
projet-chatbot/chatbot_app/templates/: auth.html  base.html  chat.html  home.html  profile.html  settings.html  splash.html
projet-chatbot/chatbot_app/templates/emails/: confirm_email.html
projet-chatbot/instance/: db.sqlite3
